<resources>
    <string name="app_name">Tasks Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="taskListBtn">Task List</string>
    <string name="username_hint">Username</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="description_hint_text">Description:</string>
    <string name="comment_hint_text">Write a comment…</string>
    <string name="task_name">Task name</string>
    <string name="tasks_menu_item_title">Tasks</string>
    <string name="tags_menu_item_title">Tags</string>
    <string name="charts_menu_item_title">Charts</string>
    <string name="sign_out_menu_item_title">Sign out</string>
    <string name="delete_tags_dialog_title">Delete</string>
    <string name="delete_tags_dialog_content">Are you sure you want to delete this tag?</string>
    <string name="delete_tags_dialog_confirm">Delete</string>
    <string name="delete_tags_dialog_deny">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="choose_a_color_dialog">Choose a color</string>
    <string name="tag_name_dialog_hint">Tag Name</string>
    <string name="create_tag_dialog_title">Create new Tag</string>
    <string name="update_tag_dialog_title">Update tag</string>
    <string name="update_tag_dialog_pos_btn">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_text">UPDATE</string>
    <string name="username">Username:</string>
    <string name="email">Email</string>
    <string name="remove">Remove</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="subtask">Subtask:</string>
    <string name="tag">Tag:</string>
    <string name="name">Name</string>
    <string name="task_name_2">Task Name:</string>
    <string name="status">Status:</string>
    <string name="update">Update Mode</string>
    <string name="view">View Mode</string>
    <string name="add">Add</string>
    <string name="all">All</string>
    <string name="by_todo">By ToDo</string>
    <string name="by_doing">By Doing</string>
    <string name="by_done">By Done</string>
    <string name="by_title">By Title</string>
    <string name="by_due_date">By Due Date</string>
    <string name="none">None</string>
    <string name="choose_date">Choose Date</string>
    <string name="due_date">Due Date:</string>

    <string name="light_theme">Dark Theme</string>
    <string name="create">CREATE</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="change_language_item_title">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_vietnamese">Vietnamese</string>
    <string name="permission">Permission Alert</string>
    <string name="permission_req">This feature require permission to write to calendar, please grant write calendar permission.</string>
    <string name="permission_req_denied">This feature is not available without permission to write to calendar.</string>
</resources>
