<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/nav_item_group">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/tasks_menu_item_title" />
        <item
            android:id="@+id/tagsFragment"
            android:title="@string/tags_menu_item_title" />
        <item
            android:id="@+id/updateUserProfileFragment"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/chartsFragment"
            android:title="@string/charts_menu_item_title" />


    </group>
    <group android:id="@+id/functional_item_group">
        <item
            android:layout_margin="0dp"
            android:padding="0dp"
            android:id="@+id/switch_theme_item"
            android:title="Dark Theme"
            app:actionLayout="@layout/switch_theme"
            app:showAsAction="always" />
        <item
            android:id="@+id/change_language_item"
            android:title="@string/change_language_item_title" />
        <item
            android:id="@+id/sign_out_item"
            android:title="@string/sign_out_menu_item_title" />

    </group>
</menu>